# stream-scribe

./: .env.example  .gitignore  LICENSE  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
stream_scribe/: __init__.py  __main__.py
stream_scribe/domain/: __init__.py  constants.py  event_bus.py  events.py  models.py  settings.py
stream_scribe/infrastructure/: __init__.py  config.py
stream_scribe/infrastructure/ai/: __init__.py  claude_client.py  llm_client.py  prompts.py  summarizer.py
stream_scribe/infrastructure/audio/: __init__.py  audio_stream.py  sources.py  vad_detector.py  vad_state_machine.py
stream_scribe/infrastructure/ml/: __init__.py  filters.py  transcriber.py  transcription_strategy.py
stream_scribe/infrastructure/persistence/: __init__.py  json_exporter.py
stream_scribe/presentation/: __init__.py  app.py  display.py  input_handler.py  status_update_manager.py
stream_scribe/presentation/cli/: __init__.py  controller.py  display.py  main.py  status_update_manager.py  view.py
tests/: test_filters.py  test_llm_client.py  test_transcription_strategy.py  test_vad_state_machine.py
