[project]
name = "stream-scribe"
version = "0.1.0"
description = "Real-time speech transcription and conversation structuring tool using Whisper and Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.74.1",
    "colorama>=0.4.6",
    "mlx-whisper>=0.4.3",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.0",
    "wcwidth>=0.2.14",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
